--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,26 @@
 [project]
 name = "tta"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "Aiden-Jeon",email = "aiden.jongseob@gmail.com"}
-]
+description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11,<3.13"
+requires-python = ">=3.10"
 dependencies = [
-    "torch (==2.5.1)",
-    "numpy (==1.26.4)",
-    "torchvision (==0.20.1)",
-    "yacs (>=0.1.8,<0.2.0)",
-    "tabulate (>=0.9.0,<0.10.0)"
+    "numpy==1.26.4",
+    "robustbench",
+    "tabulate>=0.9.0",
+    "torch==2.5.1",
+    "torchvision==0.20.1",
+    "yacs>=0.1.8",
 ]
+
+[tool.uv.sources]
+robustbench = { git = "https://github.com/RobustBench/robustbench.git" }
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+
+[tool.setuptools]
+packages = ["tta"]
