--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,11 @@ name = "tta"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11,<3.13"
 dependencies = [
     "numpy==1.26.4",
     "robustbench",
+    "setuptools>=75.8.0",
     "tabulate>=0.9.0",
     "torch==2.5.1",
     "torchvision==0.20.1",
