--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11,<3.13"
 dependencies = [
     "numpy==1.26.4",
     "robustbench",
+    "setuptools>=75.8.0",
     "tabulate>=0.9.0",
     "torch==2.5.1",
     "torchvision==0.20.1",
