--- a/tta/config/cifar10c/memo.yaml
+++ b/tta/config/cifar10c/memo.yaml
@@ -4,7 +4,6 @@ MODEL:
   ADAPTATION: 'MEMO'  # MEMO 메소드 사용
   GROUP_NORM: 8  # GroupNorm의 group 수
   NUM_CLASSES: 10  # CIFAR-10의 클래스 수
-  CKPT_PATH: 'cifar-10-exps/results/cifar10_rn26_gn/ckpt.pth'  # 체크포인트 경로
 
 OPTIM:
   METHOD: 'sgd'  # MEMO는 SGD optimizer 사용
@@ -12,12 +11,13 @@ OPTIM:
   STEPS: 1  # adaptation 반복 횟수
 
 DATA:
-  ROOT: 'dataset/cifar10c'
   BATCH_SIZE: 32  # memo  기본값과 동일
   NUM_WORKERS: 8  # memo  workers와 동일
   NORM:
     MEAN: [0.5, 0.5, 0.5]  # memo  NORM과 동일
     STD: [0.5, 0.5, 0.5]
+  # for local
+  # ROOT: 'dataset/CIFAR-10-C'
 
 SHIFT:
   TYPE: [
