Add robustbench backend and logging (#10)
* Update Wide-ResNet-28-10

* Unable pretrain of wide resnet

* Add source experiment on robustbench cifar10 pretrained WRN28-10

* Add saving experiment result with log.txt

* Add current progress of experiment

* Add robustbench example

* Add print results in cli

Co-authored-by: Jongseob Jeon <aiden.jongseob@gmail.com>

---------

Co-authored-by: Jongseob Jeon <aiden.jongseob@gmail.com>

--- a/config/cifar10c/source_robustbench_example.yaml
+++ b/config/cifar10c/source_robustbench_example.yaml
@@ -5,8 +5,8 @@
 
 MODEL:
   ADAPTATION: Source
-  NAME: resnet26
-  BACKEND: custom
+  NAME: Standard
+  BACKEND: robustbench
 SHIFT:
   SEVERITY:
     - 5
