--- a/config/cifar10c/source.yaml
+++ b/config/cifar10c/source.yaml
@@ -1,11 +1,11 @@
-# AVAILABLE_BACKEND = ["robustbench", "torchvision", "custom"]
+# AVAILABLE_BACKEND = ["robustbench", "torchvision", "huggingface"]
 # AVAILABLE_ROBUST_MODEL = ["Standard"]
 # AVAILABLE_CUSTOM_MODEL = ["resnet26", "wide_resnet28_10"]
 # AVAILABLE_OPTIM = ["adam"]
 
 MODEL:
   ADAPTATION: Source
-  NAME: resnet26
+  NAME: wide_resnet28_10
   BACKEND: huggingface
 SHIFT:
   SEVERITY:
