refactor model loading algorithm
Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ dependencies = [
 [tool.uv.sources]
 robustbench = { git = "https://github.com/RobustBench/robustbench.git" }
 
+[project.optional-dependencies]
+dev = [
+    "ipython",
+    "ipykernel",
+]
 
 [build-system]
 requires = ["setuptools"]
