--- a/config/cifar10c/source.yaml
+++ b/config/cifar10c/source.yaml
@@ -6,14 +6,10 @@
 MODEL:
   ADAPTATION: Source
   NAME: wide_resnet28_10
-  BACKEND: huggingface
+  BACKEND: robustbench
 SHIFT:
   SEVERITY:
     - 5
-    - 4
-    - 3
-    - 2
-    - 1
   TYPE:
     - gaussian_noise
     - shot_noise
