update method with new yacs config
Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

--- a/config/cifar10c/lame.yaml
+++ b/config/cifar10c/lame.yaml
@@ -1,29 +1,10 @@
+METHOD:
+  NAME: Lame
+
 MODEL:
-    ADAPTATION: Lame
-    NAME: resnet26
-    BACKEND: huggingface
+  NAME: wide_resnet28_10
+  BACKEND: robustbench
+
 DATA:
-    BATCH_SIZE: 4
-SHIFT:
-    SEVERITY:
-        - 5
-        - 4
-        - 3
-        - 2
-        - 1
-    TYPE:
-        - gaussian_noise
-        - shot_noise
-        - impulse_noise
-        - defocus_blur
-        - glass_blur
-        - motion_blur
-        - zoom_blur
-        - snow
-        - frost
-        - fog
-        - brightness
-        - contrast
-        - elastic_transform
-        - pixelate
-        - jpeg_compression
+  NUM_SAMPLES: 100
+  BATCH_SIZE: 4
