--- a/config/cifar10c/shot.yaml
+++ b/config/cifar10c/shot.yaml
@@ -1,28 +1,14 @@
+METHOD:
+  NAME: SHOT
+  OPTIM_METHOD: sgd
+  OPTIM_LR: 0.005
+  OPTIM_STEPS: 1
+  NORM_MEAN: [0.5, 0.5, 0.5]
+  NORM_STD: [0.5, 0.5, 0.5]
+
 MODEL:
-  NAME: 'wide_resnet28_10'
-  BACKEND: 'robustbench'
-  ADAPTATION: 'SHOT'
-  NUM_CLASSES: 10
-  # GROUP_NORM: 8
-OPTIM:
-  METHOD: 'sgd'
-  LR: 0.005
-  STEPS: 1
-
+  NAME: wide_resnet28_10
+  BACKEND: robustbench
 DATA:
-  BATCH_SIZE: 32
-  NUM_WORKERS: 8
-  NORM:
-    MEAN: [0.5, 0.5, 0.5]
-    STD: [0.5, 0.5, 0.5]
-  # for local
-  # ROOT: 'dataset/CIFAR-10-C'
-
-SHIFT:
-  TYPE: [
-    'gaussian_noise', 'shot_noise', 'impulse_noise',
-    'defocus_blur', 'glass_blur', 'motion_blur', 'zoom_blur',
-    'snow', 'frost', 'fog', 'brightness',
-    'contrast', 'elastic_transform', 'pixelate', 'jpeg_compression'
-  ]
-  SEVERITY: [1, 2, 3, 4, 5]
+  BATCH_SIZE: 4
+  NUM_SAMPLES: 12 # 배치 사이즈에 정수배여야 동작함.
