Use keyword argument explicitly rather than using yacs config node (#18)
* refactor

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* add utils to get default config

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* change default config

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* add default to method to get easily

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* clean code for understand

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* refactor yacs config and use kwargs determisticly

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* remove unused example

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* update method with new yacs config

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* change set_loss name to set_loss_fn

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* enable grad

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

* Update reset method (#20)

* reproduce lame with robustbench model

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

---------

Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>
Co-authored-by: Wonjun <50730434+wonjun-dev@users.noreply.github.com>

--- a/config/cifar10c/source.yaml
+++ b/config/cifar10c/source.yaml
@@ -2,27 +2,14 @@
 # AVAILABLE_ROBUST_MODEL = ["Standard"]
 # AVAILABLE_CUSTOM_MODEL = ["resnet26", "wide_resnet28_10"]
 # AVAILABLE_OPTIM = ["adam"]
+METHOD:
+  NAME: Source
 
 MODEL:
-  ADAPTATION: Source
   NAME: wide_resnet28_10
   BACKEND: robustbench
-SHIFT:
-  SEVERITY:
-    - 5
-  TYPE:
-    - gaussian_noise
-    - shot_noise
-    - impulse_noise
-    - defocus_blur
-    - glass_blur
-    - motion_blur
-    - zoom_blur
-    - snow
-    - frost
-    - fog
-    - brightness
-    - contrast
-    - elastic_transform
-    - pixelate
-    - jpeg_compression
+
+
+DATA:
+  NUM_SAMPLES: 100
+  BATCH_SIZE: 100
