--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11,<3.13"
 dependencies = [
     "huggingface-hub>=0.29.1",
+    "matplotlib>=3.10.1",
     "numpy==1.26.4",
     "robustbench",
     "setuptools>=75.8.0",
