add strealit app
Signed-off-by: Jongseob Jeon <jongseob.jeon@databricks.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ robustbench = { git = "https://github.com/RobustBench/robustbench.git" }
 dev = [
     "ipython",
     "ipykernel",
+    "streamlit",
+    "matplotlib",
 ]
 
 [build-system]
